<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:background="#ffffff"
            android:text="@string/hint_phone">
        </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:layout_weight="4"
            android:background="#ffffff"
            android:text="@string/verifyCode">
        </EditText>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            android:text="@string/getVerifyCode"/>

    </LinearLayout>



</LinearLayout>
